# PSX-Engine

./: CMakeLists.txt
assets/: Girl.tim  Girl_4bit.tim  kuromi_4bit.tim  test_8bit.tim  test_8bit_4bit.tim
src/Engine/Core/: Application.cpp  Application.hpp  Debug.cpp  Debug.hpp
src/Engine/Input/: Input.cpp  Input.hpp  spi.cpp  spi.hpp
src/Engine/Mesh/: Mesh.cpp  Mesh.hpp
src/Engine/Render/: RenderBuffer.cpp  RenderBuffer.hpp  RenderContext.cpp  RenderContext.hpp
src/Engine/Scene/: Entity.hpp  Scene.hpp
src/Engine/Sprite/: Sprite.cpp  Sprite.hpp
src/Engine/Structs/: LinkedList.hpp
src/Game/: Main.cpp
src/Game/Scenes/: Gameplay.hpp
src/Game/Shared/Player/: Player.hpp
